v0.2.3 20160429 -- Fixing bad package
v0.2.1 20160428 —— Cleaning up package

v0.2.0 20150415 —— Supporting new Yahoo finance API

* removed redundant tokens
* removed deprecated tokens
* updated list of fields containing commas
* _get_quote_block() now retrieves up to 1000 quotes at a time
  (was 200)
* updated S&P 500 input list
* error_indictation is now determined by _get_quote_block() since
  yahoo no longer provides this
* updated unit tests

v0.1.2 20150205 —- Adding tests and ‘get_quote()’ function

* Added basic unit tests which use pyrest
* Added get_quote for querying for data for a single function
* Updated documentation

v0.1.1, 20140717 —- Modules now available at package level, bug fix

* updated __init__.py to import submodules
* fixed bug when acquiring data for more than 199 symbols

v0.1.0, 20140715 -- Initial release.