@@ -1,5 +1,3 @@
-#!/usr/bin/env python
-#
 # pyhoofinance - quotedata.py
 #
 # Copyright (c) 2014-2016, Rob Innes Hislop
